<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:padding="@dimen/main_padding_double"
    android:gravity="center">
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/two_line_height"
        android:maxLines="2"
        android:layout_marginBottom="@dimen/main_padding"
        android:text="@string/no_connection_message"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="@dimen/main_padding"
            android:background="@drawable/button_round_corner_state"  />
        <TextView
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginRight="@dimen/main_padding"
            android:background="@drawable/button_round_corner_state"  />
    </LinearLayout>

</LinearLayout>