<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_padding"
            android:text="@string/enter_new_device_name"  />

        <EditText android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/main_padding"
            android:paddingRight="@dimen/main_padding"
            android:background="@drawable/edittext_round"
            android:textColor="@android:color/white"
            android:maxLength="16"
            android:hint="Device name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/main_padding"
                android:text="@string/cancel"
                android:background="@drawable/button_round_corner_state"  />

            <TextView
                android:id="@+id/buttonAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/main_padding"
                android:text="@string/accept"
                android:background="@drawable/button_round_corner_state"  />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>