<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.v2d.trackme.MainActivity">

    <data>
        <variable name="viewModel" type="com.v2d.trackme.viewmodels.MainViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_padding"
            android:orientation="vertical"
            android:gravity="center" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_padding"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:src="@drawable/ic_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ToggleButton
                    android:id="@+id/toggle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toggle_onClick"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_padding"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:src="@drawable/ic_device"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/main_padding"
                    android:textSize="@dimen/medium_text"
                    android:text="@string/my_device_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_round"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/my_device_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingLeft="@dimen/edittext_padding_left"
                    android:hint="@string/name_here"
                    android:background="@android:color/transparent"
                    android:text="" />

                <ImageView
                    android:layout_width="@dimen/round_button_size"
                    android:layout_height="@dimen/round_button_size"
                    android:background="@drawable/button_circle_state"
                    android:layout_marginRight="@dimen/main_padding"
                    android:src="@drawable/ic_edit"
                    android:onClick="changeDeviceName_onClick"/>

                <ImageView
                    android:layout_width="@dimen/round_button_size"
                    android:layout_height="@dimen/round_button_size"
                    android:background="@drawable/button_circle_state"
                    android:layout_marginRight="@dimen/main_padding"
                    android:src="@drawable/ic_copy"
                    android:onClick="copy_onClick"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_padding_double"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="@dimen/round_button_size"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="@dimen/main_padding"
                    android:textSize="@dimen/small_text"/>
                <TextView
                    android:layout_width="@dimen/round_button_size"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="@dimen/main_padding"
                    android:textSize="@dimen/small_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_padding"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:src="@drawable/ic_earth"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/main_padding"
                    android:textSize="@dimen/medium_text"
                    android:text="@string/track_a_device" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edittext_round"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/main_padding_double">
                <EditText
                    android:id="@+id/device_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/edittext_padding_left"
                    android:hint="@string/name_here"
                    android:text="@{viewModel.deviceName}"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/main_padding"
                    android:padding="@dimen/round_button_padding"
                    android:background="@drawable/button_round_corner_state"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:onClick="track_onClick"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_track"
                        android:text="@string/track" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/track"
                        android:textSize="@dimen/small_medium_text"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_padding_half"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/two_line_height"
                android:layout_marginBottom="@dimen/main_padding"
                android:gravity="center_horizontal|top"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="No Address found"
                android:textColor="@color/colorAccent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/main_padding_double"
                android:background="@drawable/button_round_corner_state"
                android:gravity="center"
                android:orientation="horizontal"
                android:onClick="map_onClick"
                android:clickable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pinmap"
                    android:text="@string/track" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_padding"
                    android:text="@string/see_map"
                    android:textSize="@dimen/medium_text"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_devices"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_marginBottom="@dimen/main_padding_half"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</layout>